EKS-cloud-demo/demo/storefront-stack/microservice2.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: microservice2
  namespace: storefront
  labels:
    app: microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
        fw-zone: trusted
    spec:
      imagePullSecrets:
      - name: tigera-pull-secret
      containers:
      - name: mock-twilio
        image: busybox
        command: ["/bin/sh"]
        args: ["-c", "while true; do wget https://api.twilio.com; sleep 15; done"]
      - name: mock-microservice1
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "microservice1:80"
        ports:
        - containerPort: 9000
      - name: mock-backend
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9001"
        - "backend:80"
        ports:
        - containerPort: 9001
      - name: mock-logging
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9002"
        - "backend:80"
        ports:
        - containerPort: 9002
      - name: mock
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "mock"
        - "--resourcePath"
        - "/mocks/microservice2-mock.yaml"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mockconfig
          mountPath: /mocks
      volumes:
      - name: mockconfig
        configMap:
          name: microservice2

---

kind: Service
apiVersion: v1
metadata:
  name: microservice2
  namespace: storefront
spec:
  selector:
    app: microservice2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
